# pubmed-classifier

./: .gitignore  README.md  pyproject.toml
data/: Assignment 2 Dataset.xlsx
data/graphs_pmi/test/: 24704195.gpickle  24954735.gpickle  25019231.gpickle  25062114.gpickle  25216055.gpickle  25594271.gpickle  25600375.gpickle  25617550.gpickle  25636205.gpickle  25733044.gpickle  25735479.gpickle  25775261.gpickle  25816156.gpickle  25875249.gpickle  25894235.gpickle  25911622.gpickle  25924032.gpickle  25966634.gpickle  25983051.gpickle  25991273.gpickle  25991277.gpickle  26018421.gpickle  26036860.gpickle  26051269.gpickle  26074371.gpickle  26093606.gpickle  26112455.gpickle  26139358.gpickle  26157012.gpickle  26183797.gpickle  26219924.gpickle  26249752.gpickle  26264808.gpickle  26314304.gpickle  26314686.gpickle  26321049.gpickle  26377219.gpickle  26380867.gpickle  26391225.gpickle  26407905.gpickle  (+353 more)
data/graphs_pmi/train/: 20301317.gpickle  22420015.gpickle  23210975.gpickle  23774847.gpickle  23932837.gpickle  24404629.gpickle  24460665.gpickle  24698312.gpickle  24725020.gpickle  24807144.gpickle  24836022.gpickle  24860945.gpickle  24930489.gpickle  24938365.gpickle  24957110.gpickle  25058627.gpickle  25088278.gpickle  25117558.gpickle  25140979.gpickle  25149099.gpickle  25149100.gpickle  25188399.gpickle  25200794.gpickle  25230963.gpickle  25239566.gpickle  25251442.gpickle  25256364.gpickle  25264092.gpickle  25298289.gpickle  25298291.gpickle  25336078.gpickle  25392235.gpickle  25407129.gpickle  (+2212 more)
data/labels/: test_labels.csv  train_labels.csv
jupyter/: test.ipynb
scripts/: build_test_graph.py  build_train_graph.py  classifier_inference.py  classifier_train.py  clean_and_save_graph.py  demo_build_graph.py  eda.py  ensemble_inference.py  ensemble_train.py  evaluate_test.py  fetch_data.py  graph_pipeline.py  kg_embed.py  plot.py  preprocess.py  spacy_link.py  test_spacy_model.py  train.py  train_gnn.py
utils/: load_spacy.py  pmi.py
(+2535 files in other folders)
