[project]
name = "kg-gnn-pubmed"
version = "0.1.0"
description = ""
authors = [
    {name = "Morris"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "metapub (>=0.5.12,<0.6.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "spacy (==3.7.2)",
    "scispacy (>=0.5.5)",
    "numpy (==1.24.4)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
